--- a/README
+++ b/README
@@ -1,60 +1,67 @@
-
-raw README
-Release version: 0.1.1 (May 15 2004)
--------------------------------------------------------------------------------
-
-About:
-------
-
-raw is a re-implementation of the engine used in the game Another World. This 
+AnotherWorld DS
+--------------------------------------------------------------------------------
+AnotherWorld DS is based on newraw engine (http://sourceforge.net/projects/newraw/)
+newraw is a re-implementation of the engine used in the game Another World. This 
 game, released under the name Out Of This World in non-European countries, was 
 written by Eric Chahi at the beginning of the '90s. More information can be 
 found here : http://www.mobygames.com/game/sheet/p,2/gameId,564/.
 
-Please be aware that, currently, this implementation may contains bugs and 
-non-implemented features that make it impossible to finish the game.
-
-Supported Versions:
--------------------
-
-Currently, only the english PC DOS version is supported ("Out of this World").
-
-Compiling:
+Features :
 ----------
+ Most things you should expect from newraw engine.
 
-Tweak the Makefile if needed and type make (only gcc3 has been tested so far).
-The SDL and zlib libraries are required.
+Missing :
+---------
+ All that is not yet tested ;)
+ Improve sound and music mixing
 
-Running:
---------
+Check updates on my web site : 
+http://www.portabledev.com
 
-You will need the original files, here is the required list :
+--------------------------------------------------------------------------------
+History :
+--------------------------------------------------------------------------------
+V1.0 : 16/07/2011
+  * Initial release based on newraw engine
+  
+--------------------------------------------------------------------------------
+How tu use AnotherWorldDS :
+--------------------------------------------------------------------------------
+YOU NEED PERHAPS TO PATCH THE NDS FILE WITH THE DLDI PATCH BEFORE USING IT. 
+
+You will need the original files from English version of Out Of this World, here 
+is the required list :
     BANK*
     MEMLIST.BIN
 	
-To start the game, you can either :
-- put the game's datafiles in the same directory as the executable
-- use the --datapath command line option to specify the datafiles directory
+Warning, the engine will not work with french version of these files.
 
-Here are the various in game hotkeys :
-    Arrow Keys      allow you to move Lester
-    Enter/Space     allow you run/shoot with your gun
-    C               allow to enter a code to jump at a specific level
-    P               pause the game
-    Alt X           exit the game
-    Ctrl S          save game state
-    Ctrl L          load game state
-    Ctrl + and -    change game state slot
-    Ctrl F          toggle fast mode
-    Alt Enter       toggle windowed/fullscreen mode
-    Alt + and -     change scaler factor
+To start the game, you must :
+- create a directory at the root of your card named RAW
+- put the game's datafiles in the diorectory named RAW 
+- run antoherworld.nds
 
+That's all, AnotherWorldDS can be use now :) !
+
+Controls :
+ * Direction pad : the joystick ... (up used to to jump & swim)
+ * A           : allow you run/shoot with your gun
+ * B           : used to to jump & swim (easiest than UP ^^)
+ * SELECT      : allow to enter a code to jump at a specific level
+ * START       : pause the game
+ * Touchscreen : exit the game
+ * R           : Save game state
+ * L           : Load game state
+ 
+--------------------------------------------------------------------------------
 Credits:
---------
+--------------------------------------------------------------------------------
+Thanks Wintermute for devkitpro and libnds (http://www.devkitpro.org).
+  Eric Chahi, Delphine Software, obviously, for making this great game.
+  Gregory Montoir, cyx@users.sourceforge.net (original Raw for PC)
 
-Eric Chahi, obviously, for making this great game.
-
-Contact:
---------
-
-Gregory Montoir, cyx@users.sourceforge.net
+--------------------------------------------------------------------------------
+Alekmaul
+alekmaul@portabledev.com
+http://www.portabledev.com
+--------------------------------------------------------------------------------
